--- a/WebPagePractice170409/WebPagePractice170409/WebPagePractice170409.csproj
+++ b/WebPagePractice170409/WebPagePractice170409/WebPagePractice170409.csproj
@@ -23,13 +23,26 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\app.css" />
+    <Content Include="css\saisei.about.css" />
+    <Content Include="css\saisei.gallery.css" />
+    <Content Include="css\saisei.shell.css" />
     <Content Include="index.html" />
+    <Content Include="scripts\typings\jquery\jquery-3.1.1.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="scripts\app.ts" />
+    <TypeScriptCompile Include="scripts\saisei.about.ts" />
+    <TypeScriptCompile Include="scripts\saisei.data.ts" />
+    <TypeScriptCompile Include="scripts\saisei.gallery.ts" />
+    <TypeScriptCompile Include="scripts\saisei.interface.ts" />
+    <TypeScriptCompile Include="scripts\saisei.model.ts" />
+    <TypeScriptCompile Include="scripts\saisei.shell.ts" />
+    <TypeScriptCompile Include="scripts\saisei.utils.ts" />
+    <TypeScriptCompile Include="scripts\typings\jquery\jquery.d.ts" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
