--- a/WebPagePractice170409/WebPagePractice170409/WebPagePractice170409.csproj
+++ b/WebPagePractice170409/WebPagePractice170409/WebPagePractice170409.csproj
@@ -23,10 +23,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\app.css" />
+    <Content Include="css\jquery-ui.css" />
     <Content Include="css\saisei.about.css" />
     <Content Include="css\saisei.gallery.css" />
     <Content Include="css\saisei.shell.css" />
     <Content Include="index.html" />
+    <Content Include="scripts\typings\jqueryui\jquery-ui.js" />
     <Content Include="scripts\typings\jquery\jquery-3.1.1.js" />
     <Content Include="web.config" />
   </ItemGroup>
@@ -39,6 +41,7 @@
     <TypeScriptCompile Include="scripts\saisei.model.ts" />
     <TypeScriptCompile Include="scripts\saisei.shell.ts" />
     <TypeScriptCompile Include="scripts\saisei.utils.ts" />
+    <TypeScriptCompile Include="scripts\typings\jqueryui\jqueryui.d.ts" />
     <TypeScriptCompile Include="scripts\typings\jquery\jquery.d.ts" />
   </ItemGroup>
   <ItemGroup>
